k8s/overlays/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-argo-express
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: kube-argo-express
          image: localhost:5000/kube-argo-express:latest
