k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-argo-express
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kube-argo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-argo-express
                port:
                  number: 8080
